--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,16 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# CLAUDE
+claude-helpers/
+CLAUDE.mm
+.claude/*
+
+# ChromaDB
+chroma_db/
+
+# Test outputs
+test_results.txt
+client_output.txt
